<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cliente.EditarPerfilCliente">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarEditarPerfil"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height"
        android:background="@color/rosa">

        <ImageButton
            android:id="@+id/Ib_regresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/EditarPerfilCliente"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#cccccc"/>

    </RelativeLayout>

    <ScrollView
        android:layout_below="@id/toolbarEditarPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!--Imagen-->
            <RelativeLayout
                android:id="@+id/perfilRL"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_perfil_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_img_perfil"
                    android:scaleType="centerCrop"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/FABCambiarImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    app:fabSize="mini"
                    android:src="@drawable/ic_cambiar_imagen"/>



            </RelativeLayout>

            <!--Información-->
            <!--nombre-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILNombres"
                android:layout_below="@id/perfilRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp">

                <EditText
                    android:id="@+id/Et_c_nombres"
                    android:hint="@string/Et_c_nombres"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Edad-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILEdad"
                android:layout_below="@id/TILNombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp">

                <EditText
                    android:id="@+id/Et_c_edad"
                    android:hint="@string/Et_c_edad"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Actualizar información-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Btn_actualizar_info"
                android:text="@string/Btn_actualizar_info"
                android:layout_marginTop="10dp"
                android:layout_below="@id/TILEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>